--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.33.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
