chore: Add DEV mode checks for console.log statements

--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "audit": "claude \"AUDIT_RULES.md 파일을 기준으로 현재 변경된 코드를 즉시 점검하고, 보안 취약점과 UX 개선점을 한국어로 보고하고 수정해줘.\"",
+    "audit:security": "claude \"보안 감사를 진행해줘: 1) .env 파일 하드코딩 확인 2) 비밀번호 해싱 여부 3) SQL Injection 가능성 4) XSS 취약점. 파일명과 라인번호로 표로 정리해줘.\"",
+    "audit:errors": "claude \"모든 API 엔드포인트와 DB 쿼리에 try-catch 에러 처리가 있는지 점검하고, 누락된 곳에 추가해줘. 수정 내역을 리포트로 만들어줘.\"",
+    "analyze": "claude \"프로젝트 구조를 분석하고 다음을 알려줘: 1) 사용된 주요 기술 스택 2) API 엔드포인트 목록 3) 데이터베이스 연결 방식 4) 환경변수 사용 현황 5) 가장 먼저 수정해야 할 보안 이슈 3가지\"",
+    "prepare": "husky",
+    "audit:quick": "node .audit/scripts/quick-check.cjs",
+    "audit:commit": "node .audit/scripts/pre-commit.cjs"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "postcss": "^8.5.6",
@@ -36,6 +44,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -44,6 +53,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.3.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
