--- a/apps/api/railway.toml
+++ b/apps/api/railway.toml
@@ -4,7 +4,7 @@
 
 [build]
 builder = "dockerfile"
-dockerfilePath = "apps/api/Dockerfile"
+dockerfilePath = "infra/docker/Dockerfile.api"
 watchPatterns = ["apps/api/**", "packages/types/**"]
 
 [deploy]
