fix(deploy): use envsubst for PORT variable in nginx for Railway

--- a/infra/docker/nginx.conf
+++ b/infra/docker/nginx.conf
@@ -33,7 +33,7 @@ http {
                image/svg+xml;
 
     server {
-        listen 80;
+        listen ${PORT:-80};
         server_name _;
         root /usr/share/nginx/html;
         index index.html;
