--- a/infra/docker/Dockerfile.web
+++ b/infra/docker/Dockerfile.web
@@ -35,20 +35,36 @@ RUN pnpm --filter @lunaalba/web build
 # Production stage with nginx
 FROM nginx:alpine AS production
 
-# Copy custom nginx config
-COPY infra/docker/nginx.conf /etc/nginx/nginx.conf
+# Set default port (Railway sets this)
+ENV PORT=80
+
+# Copy custom nginx config as template
+COPY infra/docker/nginx.conf /etc/nginx/templates/default.conf.template
 
 # Copy built files
 COPY --from=builder /app/apps/web/dist /usr/share/nginx/html
 
-# Add non-root user
-RUN addgroup -g 1001 -S nginx-app && \
-    adduser -S nginx-app -u 1001
+# Create nginx config that uses PORT env var
+RUN echo 'server { \
+  listen ${PORT}; \
+  server_name _; \
+  root /usr/share/nginx/html; \
+  index index.html; \
+  add_header X-Frame-Options "SAMEORIGIN" always; \
+  add_header X-Content-Type-Options "nosniff" always; \
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ { \
+  expires 1y; \
+  add_header Cache-Control "public, immutable"; \
+  } \
+  location / { \
+  try_files $uri $uri/ /index.html; \
+  } \
+  location /health { \
+  access_log off; \
+  return 200 "OK"; \
+  add_header Content-Type text/plain; \
+  } \
+  }' > /etc/nginx/templates/default.conf.template
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# Use envsubst to replace PORT at runtime
+CMD /bin/sh -c "envsubst '\$PORT' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
